--- a/.env
+++ b/.env
@@ -37,3 +37,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+AWS_ACCESSKEYIDUS=AKIAJ3W2Y6O7ZIKID3DA
+AWS_ACCESSKEYIDUK=AKIAJZNSTFU53FUIOGOA
