--- a/.env
+++ b/.env
@@ -38,5 +38,30 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-AWS_ACCESSKEYIDUS=AKIAJ3W2Y6O7ZIKID3DA
-AWS_ACCESSKEYIDUK=AKIAJZNSTFU53FUIOGOA
+AWS_ACCESSKEYID_US=AKIAJ3W2Y6O7ZIKID3DA
+AWS_SECRETKEY_US=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
+AWS_ACCESSKEYID_UK=AKIAJZNSTFU53FUIOGOA
+AWS_SECRETKEY_UK=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
+
+AWS_MARKETPLACEID_CA=A2EUQ1WTGCTBG2
+AWS_MARKETPLACEID_US=ATVPDKIKX0DER
+AWS_MARKETPLACEID_MX=A1AM78C64UM0Y8
+AWS_MARKETPLACEID_ES=A1RKKUPIHCS9HS
+AWS_MARKETPLACEID_UK=A1F83G8C2ARO7P
+AWS_MARKETPLACEID_FR=A13V1IB3VIYZZH
+AWS_MARKETPLACEID_DE=A1PA6795UKMFR9
+AWS_MARKETPLACEID_IT=APJ6JRA9NG5V4
+AWS_MARKETPLACEID_BR=A2Q3Y263D00KWC
+AWS_MARKETPLACEID_IN=A21TJRUUN4KGV
+AWS_MARKETPLACEID_CN=AAHKV2X7AFYLW
+AWS_MARKETPLACEID_JP=A1VC38T7YXB528
+AWS_MARKETPLACEID_AU=A39IBJ37TRP1C6
+
+AWS_ENDPOINT_NA=mws.amazonservices.com
+AWS_ENDPOINT_EU=mws-eu.amazonservices.com
+AWS_ENDPOINT_IN=mws.amazonservices.in
+AWS_ENDPOINT_CN=mws.amazonservices.com.cn
+AWS_ENDPOINT_JP=mws.amazonservices.jp
+AWS_ENDPOINT_AU=mws.amazonservices.com.au
+
+
